# grafeo-server

./: CHANGELOG.md  Cargo.toml  Dockerfile  README.md  codecov.yml  deny.toml
.github/workflows/: publish.yml  replication.yml
client/: package-lock.json  package.json  tsconfig.app.tsbuildinfo  vite.config.ts
client/src/: App.tsx
client/src/api/: client.ts
client/src/components/Admin/: BackupPanel.module.css  BackupPanel.tsx  CreateTokenDialog.module.css  CreateTokenDialog.tsx  DatabaseCards.module.css  DatabaseCards.tsx  RestoreDialog.module.css  RestoreDialog.tsx  ServerOverview.module.css  ServerOverview.tsx  TokenPanel.module.css  TokenPanel.tsx
client/src/components/Layout/: Layout.module.css  Layout.tsx
client/src/components/Sidebar/: Sidebar.module.css  Sidebar.tsx
client/src/context/: AppContext.tsx
client/src/types/: api.ts
client/src/views/: AdminView.module.css  AdminView.tsx  WorkbenchView.tsx
crates/grafeo-boltr/src/: auth.rs  backend.rs  encode.rs  lib.rs
crates/grafeo-gwp/src/: auth.rs  backend.rs  encode.rs  lib.rs
crates/grafeo-http/: Cargo.toml
crates/grafeo-http/src/: encode.rs  encode_sparql.rs  error.rs  lib.rs  replication_task.rs  state.rs  tls.rs  types.rs
crates/grafeo-http/src/middleware/: auth.rs  auth_context.rs  mod.rs  replica_guard.rs
crates/grafeo-http/src/routes/: admin.rs  backup.rs  batch.rs  database.rs  graph_store.rs  mod.rs  query.rs  replication.rs  sparql_protocol.rs  sync.rs  system.rs  tokens.rs  transaction.rs  websocket.rs
crates/grafeo-maelstrom/: Cargo.toml
crates/grafeo-maelstrom/src/: main.rs
crates/grafeo-service/: Cargo.toml
crates/grafeo-service/src/: admin.rs  auth.rs  backup.rs  changefeed.rs  crdt.rs  database.rs  error.rs  lib.rs  metrics.rs  query.rs  rate_limit.rs  replication.rs  scheduler.rs  search.rs  session.rs  stream.rs  sync.rs  token_service.rs  token_store.rs  types.rs
crates/grafeo-sync/: Cargo.toml
crates/grafeo-sync/src/: error.rs  lib.rs
jepsen/: project.clj
jepsen/src/jepsen/grafeo/: core.clj  util.clj
src/: config.rs  main.rs
tests/: docker-compose.replication.yml  integration.rs  replication.rs  replication_docker.rs
