[workspace]
members = [
    "crates/grafeo-service",
    "crates/grafeo-http",
    "crates/grafeo-gwp",
    "crates/grafeo-studio",
    "crates/grafeo-boltr",
]
resolver = "2"

[workspace.package]
version = "0.4.8"
edition = "2024"
rust-version = "1.91.1"
license = "Apache-2.0"
repository = "https://github.com/GrafeoDB/grafeo-server"

[workspace.dependencies]
# Engine
grafeo-engine = { version = "0.5.24", default-features = false }
grafeo-common = "0.5.24"

# Internal crates
grafeo-service = { path = "crates/grafeo-service" }
grafeo-http = { path = "crates/grafeo-http" }
grafeo-gwp = { path = "crates/grafeo-gwp" }
grafeo-studio = { path = "crates/grafeo-studio" }
grafeo-boltr = { path = "crates/grafeo-boltr" }

# External protocol crates
boltr = "0.1.2"
gwp = "0.1.6"

# Async
tokio = { version = "1.43", features = ["full"] }

# Shared
serde = { version = "1.0", features = ["derive"] }
thiserror = "2.0"
dashmap = "6.1"
parking_lot = "0.12"
uuid = { version = "1.11", features = ["v4"] }
tracing = "0.1"
base64 = "0.22"

[workspace.lints.rust]
unsafe_code = "warn"

[workspace.lints.clippy]
all = { level = "warn", priority = -1 }
pedantic = { level = "warn", priority = -1 }
module_name_repetitions = "allow"
must_use_candidate = "allow"
missing_errors_doc = "allow"
missing_panics_doc = "allow"
cast_possible_truncation = "allow"
cast_sign_loss = "allow"
cast_precision_loss = "allow"
cast_possible_wrap = "allow"
cast_lossless = "allow"
uninlined_format_args = "allow"
doc_markdown = "allow"
redundant_closure_for_method_calls = "allow"
similar_names = "allow"
needless_for_each = "allow"
too_many_lines = "allow"
needless_pass_by_value = "allow"
items_after_statements = "allow"
struct_field_names = "allow"
wildcard_imports = "allow"
single_match_else = "allow"
unnecessary_wraps = "allow"
unused_self = "allow"
manual_let_else = "allow"

# --- Binary crate ---

[package]
name = "grafeo-server"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
authors = ["S.T. Grond"]
description = "HTTP server for the Grafeo graph database"

[features]
default = ["http", "gwp", "studio", "all-languages", "storage", "algos"]

# Transport layers
http = ["dep:grafeo-http", "grafeo-service/openapi"]
gwp = ["gql", "storage", "dep:grafeo-gwp"]
bolt = ["cypher", "storage", "dep:grafeo-boltr"]
studio = ["http", "dep:grafeo-studio"]

# Server-specific features
owl-schema = ["grafeo-service/owl-schema"]
rdfs-schema = ["grafeo-service/rdfs-schema"]
json-schema = ["grafeo-service/json-schema"]
auth = ["grafeo-service/auth", "grafeo-http?/auth", "grafeo-gwp?/auth", "grafeo-boltr?/auth"]
tls = ["grafeo-http?/tls", "grafeo-gwp?/tls", "grafeo-boltr?/tls"]

# Engine: query languages (forwarded to grafeo-service)
gql = ["grafeo-service/gql"]
cypher = ["grafeo-service/cypher"]
sparql = ["grafeo-service/sparql"]
gremlin = ["grafeo-service/gremlin"]
graphql = ["grafeo-service/graphql"]
sql-pgq = ["grafeo-service/sql-pgq"]
all-languages = ["gql", "cypher", "sparql", "gremlin", "graphql", "sql-pgq"]

# Engine: graph algorithms (forwarded)
algos = ["grafeo-service/algos"]

# Engine: storage & execution (forwarded)
parallel = ["grafeo-service/parallel"]
wal = ["grafeo-service/wal"]
spill = ["grafeo-service/spill"]
mmap = ["grafeo-service/mmap"]
grafeo-file = ["grafeo-service/grafeo-file"]
storage = ["parallel", "wal", "grafeo-file", "spill", "mmap"]

# Engine: search & AI (forwarded)
vector-index = ["grafeo-service/vector-index"]
text-index = ["grafeo-service/text-index"]
hybrid-search = ["grafeo-service/hybrid-search"]
cdc = ["grafeo-service/cdc"]
embed = ["grafeo-service/embed"]
ai = ["vector-index", "text-index", "hybrid-search", "cdc"]

# Engine: data import formats (forwarded)
jsonl-import = ["grafeo-service/jsonl-import"]
parquet-import = ["grafeo-service/parquet-import"]
import = ["jsonl-import", "parquet-import"]

# Engine: temporal versioning (forwarded)
temporal = ["grafeo-service/temporal"]

# Engine: metrics (forwarded)
metrics = ["grafeo-service/metrics"]

# Engine: data models (forwarded)
rdf = ["grafeo-service/rdf"]

# Tiers (named build profiles)
full = [
    "http", "studio", "all-languages", "algos", "ai", "rdf", "storage", "embed",
    "owl-schema", "rdfs-schema", "json-schema", "auth", "tls", "gwp", "bolt",
    "temporal", "import", "metrics",
]

[dependencies]
# Core business logic
grafeo-service = { workspace = true }

# Transport crates (optional)
grafeo-http = { workspace = true, optional = true }
grafeo-gwp = { workspace = true, optional = true }
grafeo-boltr = { workspace = true, optional = true }
grafeo-studio = { workspace = true, optional = true }

# Async runtime
tokio = { workspace = true }

# Configuration
clap = { version = "4.5", features = ["derive", "env"] }

# Observability
tracing = { workspace = true }
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }

[dev-dependencies]
grafeo-http = { workspace = true }
grafeo-gwp = { workspace = true }
grafeo-boltr = { workspace = true }
grafeo-studio = { workspace = true }
boltr = { workspace = true, features = ["client"] }
reqwest = { version = "0.13.2", features = ["gzip", "json"] }
tokio-tungstenite = "0.28"
futures-util = "0.3"
tempfile = "3.25"
gwp = "0.1.6"
tonic = "0.14.5"
base64 = { workspace = true }
serde_json = "1.0"
axum = { version = "0.8" }

[lints]
workspace = true

[profile.release]
lto = "thin"
codegen-units = 1
opt-level = 3
strip = true
