[package]
name = "grafeo-service"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "Core business logic for the Grafeo graph database server"

[dependencies]
grafeo-engine = { workspace = true }
grafeo-common = { workspace = true }
tokio = { workspace = true }
dashmap = { workspace = true }
parking_lot = { workspace = true }
serde = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
uuid = { workspace = true }
base64 = { workspace = true }

# Lock-free atomic Arc swap (for hot-swapping database handles during restore)
arc-swap = "1"

# JSON (always needed for SearchHit properties)
serde_json = "1"


# Schema loading (optional)
sophia_turtle = { version = "0.9", optional = true }
sophia_api = { version = "0.9", optional = true }
sophia_inmem = { version = "0.9", optional = true }
jsonschema = { version = "0.41", optional = true }

# Auth (optional)
subtle = { version = "2", optional = true }

# OpenAPI (optional — activated by HTTP transport crate)
utoipa = { version = "5", optional = true }

[features]
default = ["gql", "storage", "algos"]

# Query languages (forwarded to grafeo-engine)
gql = ["grafeo-engine/gql"]
cypher = ["grafeo-engine/cypher"]
sparql = ["grafeo-engine/sparql", "grafeo-engine/regex", "rdf"]
gremlin = ["grafeo-engine/gremlin"]
graphql = ["grafeo-engine/graphql"]
sql-pgq = ["grafeo-engine/sql-pgq"]
all-languages = ["gql", "cypher", "sparql", "gremlin", "graphql", "sql-pgq"]

# Engine: graph algorithms
algos = ["grafeo-engine/algos"]

# Engine: storage & execution
parallel = ["grafeo-engine/parallel"]
wal = ["grafeo-engine/wal"]
spill = ["grafeo-engine/spill"]
mmap = ["grafeo-engine/mmap"]
grafeo-file = ["grafeo-engine/grafeo-file"]
storage = ["parallel", "wal", "grafeo-file", "spill", "mmap"]

# Engine: search & AI
vector-index = ["grafeo-engine/vector-index"]
text-index = ["grafeo-engine/text-index"]
hybrid-search = ["grafeo-engine/hybrid-search"]
cdc = ["grafeo-engine/cdc"]
embed = ["grafeo-engine/embed"]
ai = ["vector-index", "text-index", "hybrid-search", "cdc"]

# Engine: data import formats
jsonl-import = ["grafeo-engine/jsonl-import"]
parquet-import = ["grafeo-engine/parquet-import"]

# Engine: temporal versioning
temporal = ["grafeo-engine/temporal"]

# Engine: compact columnar store (read-only, memory-efficient)
compact-store = ["grafeo-engine/compact-store"]

# Engine: async storage (async WAL and storage backend)
async-storage = ["grafeo-engine/async-storage"]

# Engine: metrics
metrics = ["grafeo-engine/metrics"]

# Engine: observability (tracing spans and events)
tracing = ["grafeo-engine/tracing"]

# Engine: data models
rdf = ["grafeo-engine/rdf"]

# Schema loading
owl-schema = ["dep:sophia_turtle", "dep:sophia_api", "dep:sophia_inmem"]
rdfs-schema = ["owl-schema"]
json-schema = ["dep:jsonschema"]

# Sync: pull-based changefeed for offline-first applications
sync = ["cdc"]
# Push-based SSE/WebSocket changefeed (requires sync)
push-changefeed = ["sync"]
# Primary-replica replication via CDC changefeed (requires sync)
replication = ["sync"]

# Auth provider
auth = ["dep:subtle"]

# OpenAPI schema derives (utoipa::ToSchema)
openapi = ["dep:utoipa"]

[dev-dependencies]
tempfile = "3"

[lints]
workspace = true
