[package]
name = "grafeo-sync"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "Async HTTP client for the Grafeo offline-first sync protocol"

[dependencies]
grafeo-service = { workspace = true, features = ["sync"] }
reqwest = { version = "0.13", features = ["json"] }
serde = { workspace = true }
serde_json = "1"
thiserror = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
url = "2"

[dev-dependencies]
tokio = { workspace = true }
axum = { version = "0.8", features = ["json"] }

[lints]
workspace = true
